--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,9 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
 
-
-    <%= link_to root_path, class: "btn btn-primary home-button" do %>
-      HabitPulse
-
-    <% end %>
+<%= link_to root_path, class: "btn btn-primary", style: "background-color: #670BFF;" do %>
+  HabitPulse
+<% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
