did further styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,14 +50,15 @@
   <div class="row">
     <div class="col-12 text-center">
       <div class="social-media">
-        <a href="#" class="mx-1"><i class="fa fa-facebook"></i></a>
-        <a href="#" class="mx-1"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="mx-1"><i class="fa fa-instagram"></i></a>
-        <a href="#" class="mx-1"><i class="fa fa-linkedin"></i></a>
+        <a href="#" class="mx-1" style="color: #3b5998;"><i class="fa fa-facebook"></i></a>
+        <a href="#" class="mx-1" style="color: #1da1f2;"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="mx-1" style="color: #e4405f;"><i class="fa fa-instagram"></i></a>
+        <a href="#" class="mx-1" style="color: #0077b5;"><i class="fa fa-linkedin"></i></a>
       </div>
     </div>
   </div>
 </div>
+
 
 
 
