removed the row class

--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -13,7 +13,7 @@
 
     <div class="breakpoint ">
 
-      <div class="habit-label-input row">
+      <div class="habit-label-input">
         <%= f.label :name, 'Habit', class: "habit-label-field col-2" %>
         <%= f.input :name, label: false, required: true, class: "col-10" %>
       </div>
