--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,5 +39,6 @@
 <div class="home-container">
   <h1 class="home-title">Welcome to Habit Pulse</h1>
   <p class="home-description">This innovative app is designed to help you organize your habits and achieve success in every area of your life.</p>
-  <a href="/about" class="home-button">About Us</a>
+
+  <%= link_to "Try Habit Pulse", dashboard_path, class: "btn btn-primary try-habit-pulse-button"  %>
 </div>
