--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -22,13 +22,13 @@ $warning:    $orange;
 $border-radius-sm:            .0625rem;
 $border-radius:               .125rem;
 
-$btn-border-radius:           2rem;
+//$btn-border-radius:           2rem;
 
 $border-radius-lg:            .25rem;
 $border-radius-xl:            .5rem;
 $border-radius-xxl:           1rem;
-$btn-border-radius:           2rem;
+
 
 // Override other variables below!
 
-$btn-font-weight: bold;
+//$btn-font-weight: bold;
