--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -2,11 +2,11 @@
 <div class="container mt-5">
   <h2 class="mb-4">Today's Habits</h2>
   <%= form_tag filter_by_date_habits_path, method: :get do %>
-    <div>
+    <%#  <div>
       <label for="date">Select Date:</label>
       <%= date_field_tag :date, params[:date] %>
-      <%= submit_tag 'Filter' %>
-    </div>
+    <%#   <%= submit_tag 'Filter' %>
+    <%#  </div> %>
   <% end %>
   <div class="row">
     <% @habits.each do |habit| %>
