--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,20 +3,15 @@
 
 <div class="scoreboard">
   <h2>Today's Habit Completion</h2>
-  <p>Completed: <%= @completed_habits_today %> out of <%= @due_habits_today %> habits</p>
+  <p>Completed: <%= @completed_habits_today %> out of <%= @current_habit_total %> habits</p>
   <p>Completion Percentage: <%= @completion_percentage %>%</p>
    <link rel="stylesheet" href="style.css">
 </div>
 
 <div class="percentage-ring-container">
   <div class="percentage-ring" id="percentageRing">
-    <div class="percentage-value" id="percentageValue"><%= @completion_percentage %>%</div>
+    <div class="percentage-value" id="percentageValue" data-percentage="<%= @completion_percentage %>">%</div>
   </div>
 </div>
 
-<script> document.addEventListener("DOMContentLoaded", function() {
-  const percentage = <%= @completion_percentage %>;
-  const percentageRing = document.getElementById('percentageRing');
-  percentageRing.style.setProperty('--percentage', `${percentage}%`);
-});
-</script> 
+<%= javascript_include_tag 'progressRing' %> 
