--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,15 +1,17 @@
 <!-- app/views/dashboard/index.html.erb -->
 <div class="container container-dashboard">
   <h1>Welcome, <%= current_user.first_name %></h1>
-  <% if current_user.habits %>
-    <p class="text-active-habits">You have <%= current_user.habits.count %> active habits</p>
+  <% if current_user.habits.count > 0 %>
+    <p class="text-active-habits fs-5">You have <%= current_user.habits.count %> active habits</p>
 
   <% else %>
     <div>
-    <%= link_to "Create a habit",  %>
-      <div class ="text-center">
-          You have no habtis
-      </div>
+    <%= link_to new_habit_path, class: "text-decoration-none fs-5 pt-3 link-create-habit" do %>
+      <i class="fa fa-plus me-2"></i> <span>Create a habit</span>
+    <% end %>
+    <div class ="text-center mt-5 text-no-habits fs-5">
+        You have yet to create any habits
+    </div>
     </div>
   <% end %>
 </div>
