--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <div class="container-fluid mt-5 text-left">
     <div class="row">
     <%# if user not logged in hide sidebar %>
-      
+
       <div class="col-md-3" <%= 'hidden' unless user_signed_in?  %> >
         <div class="sidebar d-flex flex-column align-items-center  side-nav">
 
@@ -25,7 +25,7 @@
 
             <img class="avatar-large" alt="avatar-large" src="<%=  current_user&.photo.present? ? cl_image_path( current_user&.photo&.key) : asset_path('default_profile.png')  %>" />
 
-            <%= link_to  edit_user_registration_path do %>
+            <%= link_to  edit_user_registration_path, hidden: true do %>
               <i class="fa-solid fa-pen-to-square "></i>
             <% end %>
           </div>
@@ -36,12 +36,12 @@
           <p><span class="label">Your progress: </span><span class="user-progress">744/744</span></p>
           <p><span class="label">Completion rate:</span> <span>100% 🏆</span></p>
 
-<div class="mt-5">
-  <%= link_to "Create a habit", new_habit_path, class: "btn btn-primary px-4 py-2 rounded", style: "background-color: #670BFF; transition: background 0.3s ease;" %>
-</div>
-<div class="mt-3">
-  <%= link_to "View habits", habits_path, class: "btn btn-outline-primary px-4 py-2 rounded mt-2", style: "color: #670BFF; border-color: #670BFF;" %>
-</div>
+          <div class="mt-5">
+            <%= link_to "Create a habit", new_habit_path, class: "btn btn-primary px-4 py-2 rounded", style: "background-color: #670BFF; transition: background 0.3s ease;" %>
+          </div>
+          <div class="mt-3">
+            <%= link_to "View habits", habits_path, class: "btn btn-outline-primary px-4 py-2 rounded mt-2", style: "color: #670BFF; border-color: #670BFF;" %>
+          </div>
 
 
         </div>
@@ -75,6 +75,3 @@
 
 </body>
 </html>
-
-
-
