added optional avatar upload on sign up, displays avatar if current user has a photo, shows default if it doesn't

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,11 +1,14 @@
 .avatar {
+  height: 40px;
   width: 40px;
   border-radius: 50%;
 }
 
 .avatar-large {
+  height: 150px;
   width: 150px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .avatar-bordered {
