--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,19 +1,28 @@
-<%= turbo_frame_tag "remote_modal", target: "_top" do %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, remote: true, id: "edit_#{resource_name}", data: { controller: "modal", action: "turbo:submit-end->modal#hide" } }) do |f| %>
+  <%= f.error_notification %>
 
-  <div class="modal fade" id="shareRecipeModal" tabindex="-1"     aria-labelledby="newItemRemoteModalLabel" aria-hidden="true" data-controller="remote-modal" data-action="turbo:before-render@document->remote-modal#hideBeforeRender">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content" id="modal_content">
-              <div class="modal-header">
-                  <h4 class="modal-title" id="newItemRemoteModalLabel">Edit User</h4>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <div class="form-inputs">
+    <%= f.input :photo,  as: :file %>
+    <%= f.input :email, required: true, autofocus: true %>
 
-              </div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <% end %>
 
-              <div class="modal-body remote_modal_body" id="remote_modal_body">
-                  <%= render "edit_form" %>
-              </div>
-          </div>
-      </div>
+    <%= f.input :password,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :password_confirmation,
+                required: false,
+                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :current_password,
+                hint: "we need your current password to confirm your changes",
+                required: true,
+                input_html: { autocomplete: "current-password" } %>
   </div>
 
+  <div class="form-actions">
+    <%= f.button :submit, "Update" %>
+  </div>
 <% end %>
