--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
             <%= f.input :password_confirmation,
                         required: true,
                         input_html: { autocomplete: "new-password" } %>
-            <%= f.input :photo, as: :file %>
+            <%= f.input :photo, label: "Profile picture", as: :file %>
           </div>
 
           <div class="form-actions">
