--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container mt-5">
-  <h2 class="mb-4">Today's Habits</h2>
+  <h2 class="mb-4">Your daily habits</h2>
   <%# <%= form_tag filter_by_date_habits_path, method: :get do %>
     <%# <div>
       <label for="date">Select Date:</label>
@@ -17,17 +17,12 @@
               <%= link_to habit.name, habit_static_path(habit.habit_static), class: "text-dark text-decoration-none fs-5" %>
               <small class="text-body-secondary"><%= habit.category %></small>
             </div>
-
-
-
-
             <div class="d-flex align-items-center">
-               <% if habit.today_occurrence.completion_status == 'completed' %>
+              <span class="me-2">Have you completed this habit today?</span>
+              <% if habit.today_occurrence.completion_status == 'completed' %>
                 <button class="btn btn-outline-primary complete-btn mr-2" disabled data-habit-id="<%= habit.id %>">Completed</button>
               <% elsif habit.today_occurrence.completion_status == 'pending' %>
                 <%= link_to 'Complete' ,complete_habit_path(habit.id) ,method: 'patch' %>
-
-
               <% end %>
              <div class="dropdown ms-2">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton<%= habit.id %>" data-bs-toggle="dropdown" aria-expanded="false">
