--- a/app/views/habits/edit.html.erb
+++ b/app/views/habits/edit.html.erb
@@ -5,12 +5,12 @@
       <%= simple_form_for(@habit) do |f| %>
       <div class="form-inputs">
           <%= f.input :name %>
-          <%= f.input :priority, collection: [1,2,3] %>
+          <%= f.input :priority, collection: [1,2,3,4,5] %>
 
-          <%= f.input :reminder %>
+          <%# <%= f.input :reminder %> 
 
           <%= f.input :category, collection: Habit::CATEGORIES  %>
-          <%= f.input :days_of_week %>
+          <%# <%= f.input :days_of_week %> 
         </div>
         <div class="form-actions">
           <%= f.submit  class: 'btn btn-primary'  %>
