--- a/app/views/habits/edit.html.erb
+++ b/app/views/habits/edit.html.erb
@@ -2,20 +2,20 @@
   <div class="row justify-content-center">
     <div class="col-12 col-sm-8">
       <h2>Edit Habit</h2>
+
       <%= simple_form_for(@habit) do |f| %>
-      <div class="form-inputs">
+        <div class="form-inputs">
           <%= f.input :name %>
-          <%= f.input :priority, collection: [1,2,3,4,5] %>
-
-          <%# <%= f.input :reminder %> 
-
-          <%= f.input :category, collection: Habit::CATEGORIES  %>
-          <%# <%= f.input :days_of_week %> 
+          <%= f.input :priority, collection: [1, 2, 3, 4, 5] %>
+          <%= f.input :category, collection: Habit::CATEGORIES %>
         </div>
         <div class="form-actions">
-          <%= f.submit  class: 'btn btn-primary'  %>
+          <%= f.submit class: 'btn btn-primary' %>
         </div>
       <% end %>
+
+
+      <%= render "form", habit: @habit %>
     </div>
   </div>
 </div>
