Changed the hover color of the view dashboard and view habits to look more like the app

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,10 +55,7 @@
   /* Optional: adjust spacing */
 }
 
-
-
-
-.btn {
-
-  //border-width: 3px;
+.btn-view:hover {
+  background: #670BFF;
+  color: white !important; 
 }
