--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,11 +50,11 @@
             </div>
             <% if controller_name == 'habits' && action_name == 'index' %>
               <div class="mt-3">
-                <%= link_to "View dashboard", root_path, class: "btn btn-outline-primary px-4 py-2 rounded mt-2", style: "color: #670BFF; border-color: #670BFF;" %>
+                <%= link_to "View dashboard", root_path, class: "btn btn-outline-primary  btn-view px-4 py-2 rounded mt-2", style: "color: #670BFF; border-color: #670BFF;" %>
               </div>
             <% else %>
               <div class="mt-3">
-                <%= link_to "View habits", habits_path, class: "btn btn-outline-primary px-4 py-2 rounded mt-2", style: "color: #670BFF; border-color: #670BFF;" %>
+                <%= link_to "View habits", habits_path, class: "btn btn-outline-primary btn-view px-4 py-2 rounded mt-2", style: "color: #670BFF; border-color: #670BFF;" %>
               </div>
             <% end %>
           </div>
