--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,3 +1,6 @@
+.create-form-container {
+  padding: 0px 60px;
+}
 .category-icons {
   display: flex;
   flex-wrap: wrap;
@@ -36,4 +39,46 @@
   display: block;
   margin-top: 0.5rem;
   font-size: 10px !important;
+}
+
+.days-pills {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+
+  .day-pill {
+    padding: 0.5rem 1rem;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: #f8f9fa;
+    transition: background-color 0.3s ease;
+    font-size: 12px;
+
+    &.selected {
+      background-color: #670BFF;
+      color: white;
+    }
+  }
+}
+
+.frequency-pills {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+
+  .frequency-pill {
+    padding: 0.5rem 1rem;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background-color: #f8f9fa;
+    transition: background-color 0.3s ease;
+    font-size: 12px;
+    cursor: pointer;
+
+    &.selected {
+      background-color: #670BFF;
+      color: white;
+    }
+  }
 }
