added trophies in side bar depenending on daily completion

--- a/app/assets/stylesheets/components/_progress_ring.scss
+++ b/app/assets/stylesheets/components/_progress_ring.scss
@@ -5,6 +5,13 @@
   height: 200px;
 }
 
+.percentage-ring-container-sm {
+  position: relative;
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+}
+
 .percentage-ring {
   position: relative;
   width: 100%;
