feat: options to end habbit

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,8 @@
 <div class="container container-dashboard">
   <h1>Welcome, <%= current_user.first_name %></h1>
   <% if current_user.habits.count > 0 %>
-    <p class="text-active-habits fs-5">You have <%= current_user.habits.count %> active habits</p>
+    <p class="text-active-habits fs-5">You have <%= Habit.active_habits_count(current_user) %>
+    active habits</p>
     <div class="scoreboard">
       <h2>Today's Habit Completion</h2>
       <p>Completed: <%= @completed_habits_today %> out of <%= @current_habit_total %> habits</p>
