fix: show message if habit has ended

--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -18,13 +18,19 @@
               <small class="text-body-secondary"><%= habit.category %></small>
             </div>
             <div class="d-flex align-items-center">
-              <span class="me-2">Have you completed this habit today?</span>
-              <% if habit.today_occurrence.completion_status == 'completed' %>
-                <button class="btn btn-outline-primary complete-btn mr-2" disabled data-habit-id="<%= habit.id %>">Completed</button>
-              <% elsif habit.today_occurrence.completion_status == 'pending' %>
-                <%= link_to 'Complete' ,complete_habit_path(habit.today_occurrence.id) ,method: 'patch' %>
+
+              <% if habit.ended? %>
+                <span class="me-2">You have ended this habit</span>
+              <% else %>
+                <span class="me-2">Have you completed this habit today?</span>
+                <% if habit.today_occurrence.completion_status == 'completed' %>
+                  <button class="btn btn-outline-primary complete-btn mr-2" disabled data-habit-id="<%= habit.id %>">Completed</button>
+                <% elsif habit.today_occurrence.completion_status == 'pending' %>
+                  <%= link_to 'Complete' ,complete_habit_path(habit.today_occurrence.id) ,method: 'patch' %>
+                <% end %>
               <% end %>
-             <div class="dropdown ms-2">
+
+             <%= content_tag :div, class: 'dropdown ms-2', hidden: habit.ended? do %>
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton<%= habit.id %>" data-bs-toggle="dropdown" aria-expanded="false">
                   Actions
                 </button>
@@ -36,7 +42,7 @@
 
                   <li><%= link_to "Delete",habit_path(habit),data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},  class: "dropdown-item"%></li>
                 </ul>
-              </div>
+              <% end %>
             </div>
           </div>
         </div>
