--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,8 +2,20 @@
 <div class="container container-dashboard">
   <h1>Welcome, <%= current_user.first_name %></h1>
   <% if current_user.habits.count > 0 %>
-    <p class="text-active-habits fs-5">You have <%= Habit.active_habits_count(current_user) %>
-    active habits</p>
+    <p class="text-active-habits fs-5">You are currently tracking <%= Habit.total_today_for_user(current_user) %> habits</p>
+    
+    <h2 class="mt-5">Today's Progress</h2>
+    <div class="d-flex flex-column align-items-center justify-content-center">
+      <div style="color: #24e56d">
+        <i class="fa-regular fa-circle-check fa-6x"></i>
+      </div>
+      <p class="mt-2 text-active-habits fs-5">
+        <%= Habit.completed_today_for_user(current_user) %> habits completed
+      <p>
+    </div>
+    <%= link_to habits_path, class: "text-decoration-none fs-5 pt-3 link-create-habit" do %>
+      <i class="fa fa-plus me-2"></i> <span>Go to habits</span>
+    <% end %>
   <% else %>
     <div>
     <%= link_to new_habit_path, class: "text-decoration-none fs-5 pt-3 link-create-habit" do %>
