--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -11,37 +11,42 @@
   <div class="row">
     <% @habits.each do |habit| %>
       <div class="col-12 mb-3">
-        <div class="card border-0 shadow-sm" id="habit-<%= habit.id %>">
-          <div class="card-body d-flex align-items-center justify-content-between">
-            <div class="d-flex flex-column">
-              <%= link_to habit.name, habit_static_path(habit.habit_static), class: "text-dark text-decoration-none fs-5" %>
-              <small class="text-body-secondary"><%= habit.category %></small>
-            </div>
-            <div class="d-flex align-items-center">
+        <div class="card border-0 shadow-sm card-habit" id="habit-<%= habit.id %>">
+          <div class="card-body d-flex align-items-center">
+            <i class="<%= Habit::CATEGORIES[habit.category] %> fs-3 me-3 opacity-75 icon-category"></i>
+            <div class="d-flex align-items-center justify-content-between flex-fill">
+              <div class="d-flex flex-column">
+                <%= link_to habit.name, habit_static_path(habit.habit_static), class: "text-dark text-decoration-none fs-5" %>
 
-              <% if habit.ended? %>
-                <span class="me-2">You have ended this habit</span>
-              <% else %>
-                <span class="me-2">Have you completed this habit today?</span>
-                <% if habit.today_occurrence.completion_status == 'completed' %>
-                  <button class="btn btn-outline-primary complete-btn mr-2" disabled data-habit-id="<%= habit.id %>">Completed</button>
-                <% elsif habit.today_occurrence.completion_status == 'pending' %>
-                  <%= link_to 'Complete' ,complete_habit_path(habit.today_occurrence.id) ,method: 'patch' %>
+
+                <small class="text-body-secondary"><%= habit.category %></small>
+              </div>
+              <div class="d-flex align-items-center">
+
+                <% if habit.ended? %>
+                  <span class="me-2">You have ended this habit</span>
+                <% else %>
+                  <span class="me-2">Have you completed this habit today?</span>
+                  <% if habit.today_occurrence.completion_status == 'completed' %>
+                    <button class="btn btn-outline-primary complete-btn mr-2" disabled data-habit-id="<%= habit.id %>">Completed</button>
+                  <% elsif habit.today_occurrence.completion_status == 'pending' %>
+                    <%= link_to 'Complete' ,complete_habit_path(habit.today_occurrence.id) ,method: 'patch' %>
+                  <% end %>
                 <% end %>
-              <% end %>
 
-             <%= content_tag :div, class: 'dropdown ms-2', hidden: habit.ended? do %>
-                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton<%= habit.id %>" data-bs-toggle="dropdown" aria-expanded="false">
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton<%= habit.id %>">
-                  <li><%= link_to 'Edit', edit_habit_path(habit), class: "dropdown-item" %></li>
+              <%= content_tag :div, class: 'dropdown ms-2', hidden: habit.ended? do %>
+                  <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton<%= habit.id %>" data-bs-toggle="dropdown" aria-expanded="false">
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton<%= habit.id %>">
+                    <li><%= link_to 'Edit', edit_habit_path(habit), class: "dropdown-item" %></li>
 
-                  <li><%= link_to 'End Habit', end_habit_path(habit), method: :patch,  class: "dropdown-item", :hidden => Date.today >= habit.end_date ,
-                  data: { turbo_confirm: 'Are you sure you want to end this habit?' } %></li>
+                    <li><%= link_to 'End Habit', end_habit_path(habit), method: :patch,  class: "dropdown-item", :hidden => Date.today >= habit.end_date ,
+                    data: { turbo_confirm: 'Are you sure you want to end this habit?' } %></li>
 
-                  <li><%= link_to "Delete",habit_path(habit),data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},  class: "dropdown-item"%></li>
-                </ul>
-              <% end %>
+                    <li><%= link_to "Delete",habit_path(habit),data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},  class: "dropdown-item"%></li>
+                  </ul>
+                <% end %>
+              </div>
             </div>
           </div>
         </div>
