--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 </head>
 <body>
   <%= render "shared/navbar" %>
-  <%= render "shared/flashes" %>
+  <%= render "shared/flash_messages" %>
 
   <div class="container-fluid mt-5 text-left">
     <div class="row">
